# d2-mapgen

./: .gitignore  Cargo.toml  README.md  build.bat
.cargo/: config.toml
src/: d2_client.rs  d2_ptrs.rs  d2_structs.rs  json.rs  logger.rs  main.rs  map.rs
src/d2/: d2_client.rs  d2_data.rs  d2_ptrs.rs  mod.rs
src/d2/data/: areas.rs  mod.rs  npcs.rs  objects.rs
