[package]
name = "d2-map"
version = "0.1.0"
edition = "2021"

# Force 32-bit build to match D2's 32-bit DLLs
# Use: cargo build --target i686-pc-windows-msvc --release

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
